Updated env file

--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 DB_HOST=10.0.17.59
-DB_USER=postgres
-DB_PW=ipr1smData
-DB_NAME=AddressData
-DB_URL=postgresql://${DB_USER}:${DB_PW}@${DB_HOST}/${DB_NAME}
+PG_USER=postgres
+PG_PW=ipr1smData
+PG_DB=AddressData
+DB_URL=postgresql://${PG_USER}:${PG_PW}@${DB_HOST}/${PG_DB}
